# vae_medmnist

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: betavae_v1.yml  cvae_v1.yml  cvae_v2.yml  fcvae.yml  vae.yml  vae_v1.yml  vae_v2.yml
results/v1/: README.md  best-checkpoint.ckpt  description.md  evaluation_metrics.txt  hparams.yaml  metrics.csv
results/v2/: README.md  best-checkpoint.ckpt  description.md  evaluation_metrics.txt  hparams.yaml  metrics.csv
results/v3/: README.md  cvae-best-checkpoint.ckpt  description.md  evaluation_metrics.txt  hparams.yaml  metrics.csv
results/v4/: cvae-best-checkpoint.ckpt  evaluation_metrics.txt  hparams.yaml  metrics.csv
results/v5/: hparams.yaml
results/v6/: hparams.yaml  metrics.csv
results/v7/: metrics.csv
results/version_31/: hparams.yaml
results/version_32/: hparams.yaml  metrics.csv
scripts/: datasets.ipynb  latent_vis.py  main.py  plot_losses.py  sample_images.py
scripts/conv/: compare_images.py  train.py
scripts/fc/: fc_trainer.py  train.py
src/vae_medmnist/: __init__.py
src/vae_medmnist/models/: vae.py
vae_medmnist/dataloader/: accumulated_dataset.py  medmnist_datamodule.py
vae_medmnist/datamodules/: accumulated_medmnist.py  medmnist_datamodule.py
vae_medmnist/evaluation/: eval_disentaglement.py  evaluation.py
vae_medmnist/models/: beta_vae.py  beta_vae_v2.py  components.py  cvae.py  dataloader.py  fc_vae.py  resnet_vae.py  vae.py
