[project]
name = "vae-medmnist"
version = "0.1.0"
description = "VAE implementation for the MedMNIST dataset. Part of the project for the course 'Deep Generative Models' at TU Darmstadt."
authors = [
    { name = "Pascal Kraus", email = "pascal.kraus@stud.tu-darmstadt.de" }
]
dependencies = [
    "medmnist>=3.0.1",
    "jupyter>=1.0.0",
    "ruff>=0.4.7",
    "lightning>=2.2.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vae_medmnist"]
