[project]
name = "vae-medmnist"
version = "1.2.0"
description = "VAE implementation for the MedMNIST dataset. Part of the project for the course 'Deep Generative Models' at TU Darmstadt."
authors = [
    { name = "Pascal Kraus", email = "pascal.kraus@stud.tu-darmstadt.de" }
]
dependencies = [
    "medmnist>=3.0.1",
    "jupyter>=1.0.0",
    "ruff>=0.4.9",
    "lightning>=2.2.5",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "torch==2.3.1+cu121",
    "torchvision==0.18.1+cu121",
    "torchaudio==2.3.1+cu121",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vae_medmnist"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "B", "ARG", "SIM", "UP"]
ignore = ["E501"]
[tool.ruff.format]
quote-style = "single"